Implement API for admin and refactor code